<resources>
    <string name="app_name">WebViewApp</string>
    <string name="company">https://tecksol.co.ke/</string>
    <string name="slogan">Your shop,your money,your choice</string>
    <string name="powered">Powered by TecksolKE</string>
    <string name="network">Please check your internet connection…</string>
    <string name="try_again">Try Again</string>
    <string name="loading">Loading…</string>
    <string name="error">Sorry A Network Error Occurred…</string>
</resources>
