<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg03"
        tools:context=".Error404">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@color/transparentColor"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/splash_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/slogan"
                android:src="@mipmap/logo" />

        <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/network"
                android:textColor="@color/white_two"
                android:textSize="15sp"
                android:textStyle="bold" />

        <Button
                android:id="@+id/tryAgain"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                android:textColor="@color/white_two"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/shape"
                android:text="@string/try_again" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

        <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="400dp"
                android:text="@string/powered"
                android:textColor="@color/white"
                android:textSize="15dp" />

        <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/company"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:visibility="invisible" />
    </LinearLayout>

</RelativeLayout>